# git-worktree-switcher

./: .gitignore  AGENTS.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  dev.sh  git-worktree-switcher.plugin.zsh  package.json
.agents/skills/create-pull-request/: SKILL.md
.cursor/rules/: repo-and-pr.mdc
.github/workflows/: test.yml  validate-pr-description.yml
Formula/: wt-core.rb
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-02-wt-clean.md  2026-04-03-rust-migration.md  2026-04-07-unified-wt.md
docs/superpowers/specs/: 2026-04-02-wt-clean-design.md  2026-04-03-rust-migration-design.md  2026-04-07-unified-wt-design.md
rust/: Cargo.toml  build.rs
rust/src/: add.rs  clean.rs  config.rs  delete.rs  entries.rs  git.rs  main.rs  unified.rs
scripts/: wt-go  wt-rebuild.sh
spec/: spec_helper.sh  wt_clean_spec.sh  wt_delete_spec.sh  wt_entries_spec.sh  wt_main_worktree_spec.sh  wt_picker_spec.sh  wt_spec.sh  wt_unified_spec.sh
