[package]
name = "wt-core"
version = "0.1.0"
edition = "2021"
description = "Fast git worktree manager (core binary)"
license = "MIT"

[[bin]]
name = "wt-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[profile.release]
strip = true
lto = true
